# voter-turnout-forecasting-with-temporal-fusion-transformers

./: .gitignore  02_Retail-Sales-Forecasting-with-TFT.md  02_Retail-Sales-Forecasting-with-TFT.py  2025-11-12_us_voter_turnout.parquet  README.md  analysis_summary.txt  analyze_voter_turnout.py  config.yaml  generate_images.py  minimalist_plotting.py  pyproject.toml  train_tft.py  us_voter_turnout.csv
.github/workflows/: ci.yml
data/: us_voter_turnout.csv
tests/: test_smoke.py
