[project]
name = "voter-turnout-forecasting-with-temporal-fusion-transformers"
version = "0.1.0"
description = "Companion code for Medium article: voter turnout forecasting with temporal fusion transformers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pytorch-forecasting>=1.2.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "signalplot>=0.1",
    "statsmodels>=0.14.6",
    "torch>=2.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
